--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,6 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://matteopic/therion:5.5.4'
   args:
     - ${{ inputs.thconfig }}
