--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://matteopic/therion:6.2.1'
+  image: 'docker://matteopic/therion:6.2.1-slavic'
   args:
     - ${{ inputs.thconfig }}
 
