--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -40,8 +40,8 @@ jobs:
           context: .
           # Note: tags has to be all lower-case
           tags: |
-            matteopic/therion:latest 
-            matteopic/therion:${{ env.RELEASE_VERSION }}
+            speleobrad/therion:latest 
+            speleobrad/therion:${{ env.RELEASE_VERSION }}
           # build on feature branches, push only on main branch
           push: true
 
